Balance update for Baguette and Speedblocks